--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@auth/core": "0.37.0",
+    "@convex-dev/auth": "^0.0.90",
     "@hookform/resolvers": "^3.10.0",
+    "@marsidev/react-turnstile": "^1.4.1",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-aspect-ratio": "^1.1.7",
@@ -40,11 +43,13 @@
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@tanstack/react-query": "^5.83.0",
-    "baseline-browser-mapping": "^2.9.11",
-    "caniuse-lite": "^1.0.30001762",
+    "baseline-browser-mapping": "^2.9.12",
+    "boring-avatars": "^2.0.4",
+    "caniuse-lite": "^1.0.30001763",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "convex": "^1.31.3",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
