--- a/package.json
+++ b/package.json
@@ -43,9 +43,11 @@
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@tanstack/react-query": "^5.83.0",
+    "@types/canvas-confetti": "^1.9.0",
     "baseline-browser-mapping": "^2.9.12",
     "boring-avatars": "^2.0.4",
     "caniuse-lite": "^1.0.30001763",
+    "canvas-confetti": "^1.9.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
