--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "convex": "^1.31.3",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
+    "framer-motion": "^12.26.1",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
