feat: make admin route configurable via VITE_ADMIN_ROUTE env var
- Update AppRoutes.tsx to use import.meta.env.VITE_ADMIN_ROUTE
- Update AdminLogin.tsx to use VITE_ADMIN_ROUTE
- Update AdminSidebar.tsx to use VITE_ADMIN_ROUTE with /admin fallback
- Update NotificationDetailModal.tsx to use VITE_ADMIN_ROUTE for admin links
- Update dnsJobs.ts with comments explaining frontend handles routing
- Add VITE_ADMIN_ROUTE=/admin-122303 to .env.local and .env.production
- Document VITE_ADMIN_ROUTE in .env.local.example

The admin route is now configurable. Set VITE_ADMIN_ROUTE in Vercel env vars.

--- a/.env.local.example
+++ b/.env.local.example
@@ -9,6 +9,11 @@ VITE_CONVEX_URL=https://your-deployment-name.convex.cloud
 # Cloudflare Turnstile site key (public, safe for frontend)
 VITE_TURNSTILE_SITE_KEY=your-turnstile-site-key
 
+# Admin Panel Route (optional - defaults to /admin if not set)
+# Use a non-obvious path for security through obscurity
+# Note: This is visible in client JS bundle, real security is via backend role checks
+VITE_ADMIN_ROUTE=/admin-122303
+
 # ===========================================
 # CONVEX BACKEND ENVIRONMENT VARIABLES
 # Set these via: npx convex env set KEY=value
@@ -51,6 +56,6 @@ VITE_TURNSTILE_SITE_KEY=your-turnstile-site-key
 # - ALLOWED_ADMIN_EMAILS must be set (controls who can become admin)
 # - CLOUDFLARE_TURNSTILE_SECRET_KEY must be set (CAPTCHA fails without it)
 # - Do NOT set TURNSTILE_DEV_BYPASS in production
+# - Set VITE_ADMIN_ROUTE in Vercel environment variables
 #
-# Admin route is /admin - access control enforced by backend
 # Do NOT use VITE_ prefix for secrets as they get bundled into client code
