fix: remove fallback from VITE_ADMIN_ROUTE - now required
- Remove || '/admin' fallback from all frontend files
- VITE_ADMIN_ROUTE is now required, no default value
- Update .env.local.example to note it's required

--- a/.env.local.example
+++ b/.env.local.example
@@ -9,7 +9,7 @@ VITE_CONVEX_URL=https://your-deployment-name.convex.cloud
 # Cloudflare Turnstile site key (public, safe for frontend)
 VITE_TURNSTILE_SITE_KEY=your-turnstile-site-key
 
-# Admin Panel Route (optional - defaults to /admin if not set)
+# Admin Panel Route (REQUIRED - no default!)
 # Use a non-obvious path for security through obscurity
 # Note: This is visible in client JS bundle, real security is via backend role checks
 VITE_ADMIN_ROUTE=/admin-122303
